refactoring JSON_Formatter and APIRequest classes